[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_tabular"
version = "0.0.9"
authors = [
  { name="Curtis Stallings", email="curtisrstallings@gmail.com" },
]
dependencies = [
    "pythonnet==3.0.0a2",
    "clr-loader==0.1.7",
    "pandas",
    "requests"
]
description = "Connect to your tabular model and perform operations programmatically"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/Curts0/PyTabular"
"Bug Tracker" = "https://github.com/Curts0/PyTabular/issues"

[tool.setuptools]
packages.find.where = ["."]
packages.find.include = ["pytabular"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.dll"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]